# Pistachio

./: .gitignore  .gitmodules  CMakeLists.txt  create-source.bat  create.ps1  test.pistachio.json  vcpkg.json
ImGui/: ImGuiBuild.cpp  ImGuiTheme.cpp  ImGuiTheme.h  Image.cpp  Image.h
src/: main.cpp
src/adapters/exporters/: ObjExporter.cpp  ObjExporter.h  StlExporter.cpp  StlExporter.h
src/adapters/loaders/: StepFileLoader.cpp  StepFileLoader.h
src/adapters/persistence/: JsonSketchDocumentAdapter.cpp  JsonSketchDocumentAdapter.h  SketchDocumentDto.h  SketchDocumentJson.cpp  SketchDocumentJson.h  SketchDocumentMapper.cpp  SketchDocumentMapper.h
src/adapters/rendering/: OcctRenderer.cpp  OcctRenderer.h  OpenGlRenderer.cpp  OpenGlRenderer.h  RendererRouter.cpp  RendererRouter.h
src/adapters/ui/: ImGuiAdapter.cpp  ImGuiAdapter.h  UI.h
src/core/: Application.cpp  Application.h
src/core/rendering/: CameraState.h  RenderScene.h  SketchRenderBuilder.cpp  SketchRenderBuilder.h
src/domain/: Geometry.cpp  Geometry.h  Model.cpp  Model.h  SketchConstraints.cpp  SketchConstraints.h  SketchEntities.cpp  SketchEntities.h  SketchIds.h  SketchMath.h  SketchModel.h
src/ports/: IExporterPort.h  IFileLoaderPort.h  IRendererPort.h  ISketchDocumentPersistencePort.h  IUIPort.h
